PR11713: listing available variable with leading '$'

* dwflpp.cxx(dwflpp::print_locals): Add '$' to name.